fix(ui): hide the unwanted scrollbar...

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,14 @@
 }
 
 @layer utilities {
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-none {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
   .link-underline {
     position: relative;
   }
@@ -62,3 +70,4 @@
     transform: scaleX(1);
   }
 }
+
